[MOSIP-32507] Migrated Pre-reg services from Java 11 to Java 21
Signed-off-by: Aiham <aiham.hasan@mindtree.com>